--- a/package.json
+++ b/package.json
@@ -3,42 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "docker:build": "docker-compose -p naiades-data build --no-cache",
-        "docker:build:dev": "docker-compose -f docker-compose.dev.yml -p naiades-data build",
-        "docker:start": "docker-compose -p naiades-data up -d --force-recreate",
-        "docker:start:dev": "docker-compose -f docker-compose.dev.yml -p naiades-data up -d",
-        "docker:log": "docker-compose -p naiades-data logs -f",
-        "docker:stop": "docker-compose -p naiades-data down --remove-orphans -v",
-        "dev": "nodemon src/index.ts",
-        "build": "tsc --project ./",
-        "start": "node index.js",
-        "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
-        "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
-        "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json,md}",
+        "build": "docker-compose -p naiades-data build --no-cache",
+        "build:dev": "docker-compose -f docker-compose.dev.yml -p naiades-data build",
+        "start": "docker-compose -p naiades-data up -d --force-recreate",
+        "start:dev": "docker-compose -f docker-compose.dev.yml -p naiades-data up -d",
+        "log": "docker-compose -p naiades-data logs -f",
+        "stop": "docker-compose -p naiades-data down --remove-orphans -v",
         "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "dependencies": {
-        "csv-parse": "^4.16.0",
-        "express": "^4.17.1",
-        "json2csv": "^5.0.6",
-        "morgan": "^1.10.0"
-    },
-    "devDependencies": {
-        "@types/csv-parse": "^1.2.2",
-        "@types/express": "^4.17.12",
-        "@types/json2csv": "^5.0.3",
-        "@types/morgan": "^1.9.2",
-        "@types/node": "^15.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.24.0",
-        "@typescript-eslint/parser": "^4.24.0",
-        "eslint": "^7.26.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-import-resolver-typescript": "^2.4.0",
-        "eslint-plugin-import": "^2.23.2",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.3.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.4"
     }
 }
